--- a/src/html/teachermanagement_list.html
+++ b/src/html/teachermanagement_list.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -53,9 +54,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -67,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -213,6 +213,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -372,8 +373,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
 
 
 
@@ -402,6 +404,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -418,6 +421,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
   <script src="../js/teachermanagement.js"></script>
 
 
