--- a/src/html/datastatistics.html
+++ b/src/html/datastatistics.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -55,9 +56,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -69,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -220,6 +220,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -474,6 +475,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -490,6 +492,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
