--- a/src/html/datastatistics_all.html
+++ b/src/html/datastatistics_all.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
-  <link rel="stylesheet" href="../css/wj.css">
   <!-- endbuild -->
+
 
 
 
@@ -80,6 +80,7 @@
 
 
 
+
     <!-- build:sidebar -->
     <!-- 左侧菜单 -->
     <aside class="aside">
@@ -87,7 +88,41 @@
         <nav data-sidebar-anyclick-close="" class="sidebar">
           <ul class="nav">
             <li class="nav-heading ">
-              <span>欢迎来到智厢逢校长后台</span>
+              <span>课程管理</span>
+            </li>
+            <li class=" ">
+              <a href="synchronize.html" title="同步课程">
+                <em class="icon-refresh"></em>
+                <span>同步课程</span>
+              </a>
+            </li>
+            <li class=" ">
+              <a href="grammar.html" title="搞定语法">
+                <em class="icon-book-open"></em>
+                <span>搞定语法</span>
+              </a>
+            </li>
+            <li class=" ">
+              <a href="#intelligent" title="智能培优" data-toggle="collapse">
+                <em class="icon-graph"></em>
+                <span>智能培优</span>
+              </a>
+              <ul id="intelligent" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">智能培优</li>
+                <li class=" ">
+                  <a href="intelligent_test.html" title="同步智测">
+                    <span>同步智测</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="intelligent_real.html" title="真题冲刺">
+                    <span>真题冲刺</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-heading ">
+              <span>教务管理</span>
             </li>
             <li class=" ">
               <a href="datastatistics.html" title="数据统计">
@@ -96,10 +131,34 @@
               </a>
             </li>
             <li class=" ">
-              <a href="salesdata.html" title="销售数据">
-                <em class="icon-bag"></em>
-                <span>销售数据</span>
+              <a href="groupcoursemanagement.html" title="学员组课程管理">
+                <em class="icon-layers"></em>
+                <span>学员组课程管理</span>
               </a>
+            </li>
+            <li class=" ">
+              <a href="#schoolmanagement" title="学校管理" data-toggle="collapse">
+                <em class="icon-home"></em>
+                <span>学校管理</span>
+              </a>
+              <ul id="schoolmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学校管理</li>
+                <li class=" ">
+                  <a href="schoolmanagement_list.html" title="学校列表">
+                    <span>学校列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="schoolmanagement_sales.html" title="销售数据">
+                    <span>销售数据</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="schoolmanagement_setting.html" title="扣费设置">
+                    <span>扣费设置</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class=" ">
               <a href="#teachermanagement" title="教师管理" data-toggle="collapse">
@@ -137,11 +196,6 @@
                     <span>已分配学生列表</span>
                   </a>
                 </li>
-                <li class=" ">
-                  <a href="studentmanagement_recharge.html" title="学员充值">
-                    <span>学员充值</span>
-                  </a>
-                </li>
               </ul>
             </li>
             <li class=" ">
@@ -157,8 +211,8 @@
                   </a>
                 </li>
                 <li class=" ">
-                  <a href="mallmanagement_exchange.html" title="学生兑换管理">
-                    <span>学生兑换管理</span>
+                  <a href="mallmanagement_order.html" title="订单管理">
+                    <span>订单管理</span>
                   </a>
                 </li>
               </ul>
@@ -168,6 +222,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -290,6 +345,7 @@
                 <!-- endbuild -->
 
 
+
               </div>
             </div>
           </div>
@@ -303,6 +359,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -330,6 +387,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
