--- a/src/html/grammar.html
+++ b/src/html/grammar.html
@@ -22,6 +22,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -53,9 +54,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -67,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -214,6 +214,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -390,6 +391,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -406,6 +408,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
   <script src="../js/grammar.js"></script>
 
 
