--- a/src/html/grammar_unit_fillblank.html
+++ b/src/html/grammar_unit_fillblank.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -66,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -217,6 +219,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -235,145 +238,146 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-default" data-toggle="modal" data-target="#add">添加题目</button>
-            <button class="btn btn-primary ml5">保存并返回</button>
-            <h4>当前题库共
-              <span>10</span>
-              题
-            </h4>
-            <ul class="xc-questions">
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
+            <div class="panel">
+              <div class="panel-heading">
+                <button class="btn btn-default" data-toggle="modal" data-target="#add">添加题目</button>
+                <button class="btn btn-primary ml5">保存并返回</button>
+                <h4>当前题库共
+                  <span>10</span>
+                  题
+                </h4>
+                <ul class="xc-questions">
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                  <li class="col-xs-12">
+                    <div class="col-xs-11">
+                      <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
+                        <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
+                      <p class="tit">解析：解析解析解析解析解析</p>
+                    </div>
+                    <div class="col-xs-1">
+                      <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                    </div>
+                  </li>
+                </ul>
+                <!-- build:pages -->
+                <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-              <li class="col-xs-12">
-                <div class="col-xs-11">
-                  <p class="head">题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题干题
-                    <span class="fillblank"></span>干题干题干题干题干题干题干题干题干题干题干</p>
-                  <p class="tit">解析：解析解析解析解析解析</p>
-                </div>
-                <div class="col-xs-1">
-                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
-                </div>
-              </li>
-            </ul>
-            <nav aria-label="...">
-              <ul class="pagination">
-                <li class="disabled">
-                  <a href="#" aria-label="Previous">
-                    <span aria-hidden="true">«</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a href="#">1
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">2</a>
-                </li>
-                <li>
-                  <a href="#">3</a>
-                </li>
-                <li>
-                  <a href="#">4</a>
-                </li>
-                <li>
-                  <a href="#">5</a>
-                </li>
-                <li>
-                  <a href="#" aria-label="Next">
-                    <span aria-hidden="true">»</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
+                <!-- endbuild -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -385,6 +389,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -414,8 +419,8 @@
             <div class="form-group">
               <label class="col-lg-1 control-label">答案&解析:</label>
               <div class="col-lg-2">
-                  <input type="text" placeholder="请输入答案" class="form-control">
-                </div>
+                <input type="text" placeholder="请输入答案" class="form-control">
+              </div>
               <div class="col-lg-9">
                 <input type="text" placeholder="请输入解析" class="form-control">
               </div>
@@ -442,6 +447,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
   <script src="../js/grammar.js"></script>
 
 
