--- a/src/html/intelligent_real.html
+++ b/src/html/intelligent_real.html
@@ -22,6 +22,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -53,9 +54,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -67,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -220,6 +220,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -262,6 +263,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -278,6 +280,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
