--- a/src/html/schoolmanagement_sales.html
+++ b/src/html/schoolmanagement_sales.html
@@ -18,7 +18,9 @@
   <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../css/main_xc.css">
   <!-- endbuild -->
+
 
 
 
@@ -55,7 +57,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -67,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -232,98 +237,291 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          销售数据
+            销售数据
+            <ol class="breadcrumb">
+              <li><a href="./schoolmanagement_list.html">学校管理</a></li>
+              <li class="active">销售数据</li>
+            </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <!-- START panel-->
             <div class="panel-default">
               <div class="panel-heading">
-                <form class="text-right form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">选择班级：</label>
-                      <div class="col-sm-8">
-                        <select name="" id="" class="form-control">
-                          <option value="">全部</option>
-                          <option value="1">班级1</option>
-                          <option value="2">班级2</option>
-                        </select>
-                      </div>
+                <form class="form-horizontal">
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">选择省份</label>
+                    <div class="col-lg-4">
+                      <select name="account" class="form-control m-b" placeholder='请选择省份'>
+                        <option>请选择省份</option>
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                        <option>Option 4</option>
+                      </select>
                     </div>
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
-                      <div class="col-sm-8">
-                        <input type="tel" name="" class="form-control">
-                      </div>
+                    <label class="col-lg-1 control-label">检索学校</label>
+                    <div class="col-lg-4">
+                      <input type="text" placeholder="请输入学校编号或学校名" class="form-control">
                     </div>
-                    <div class="col-sm-1">
-                      <button type="button" class="btn btn-primary">搜索</button>
+                    <div class="col-lg-2">
+                      <button class="btn btn-primary">检索</button>
                     </div>
                   </div>
                 </form>
-              </div>
-              <!-- START table-responsive-->
-              <div class="panel-heading">
-                <div class="table-responsive">
-                  <table id="" class="table table-bordered table-hover">
+                <div class="table-responsive" style="margin-bottom: 10px">
+                  <table class="table table-words">
                     <thead>
                       <tr>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>总学习效率</th>
-                        <th>最后一天学习效率</th>
-                        <th>连续未学</th>
-                        <th>学生总积分</th>
-                        <th>总学习天数</th>
-                        <th>操作</th>
+                        <th class="col-xs-1" style="min-width: 80px;">学校编号</th>
+                        <th class="col-xs-1" style="min-width: 80px;">学校名称</th>
+                        <th class="col-xs-1 xc-red" style="min-width: 100px;">历史总充值</th>
+                        <th class="col-xs-1 xc-red" style="min-width: 80px;">当前余额</th>
+                        <th class="col-xs-1" style="min-width: 120px;">付费学生总数</th>
+                        <th class="col-xs-1" style="min-width: 120px;">历史付费学生数</th>
+                        <th class="col-xs-1" style="min-width: 120px;">总过期学员</th>
+                        <th class="col-xs-1 col" style="min-width: 130px;">本月续费人数(次)</th>
+                        <th class="col-xs-1 col" style="min-width: 130px;">本月总充值(次)</th>
+                        <th class="col-xs-1 col" style="min-width: 130px;">本月30天续费(次)</th>
+                        <th class="col-xs-1 col" style="min-width: 130px;">本月60天续费(次)</th>
+                        <th class="col-xs-1 col" style="min-width: 130px;">本月90天续费(次)</th>
+                        <th class="col-xs-1 col" style="min-width: 140px;">本月6个月续费(次)</th>
+                        <th class="col-xs-1 col" style="min-width: 130px;">本月3年续费(次)</th>
+                        <th class="col-xs-1" style="min-width: 110px;">本月流失学员</th>
+                        <th class="col-xs-1" style="min-width: 110px;">历史转化人数</th>
+                        <th class="col-xs-1" style="min-width: 110px;">总转化率</th>
+                        <th class="col-xs-1" style="min-width: 80;">操作</th>
                       </tr>
                     </thead>
-                    <tbody id="designerlist">
+                    <tbody>
                       <tr>
-                        <td>18000000000</td>
+                        <td>A000001</td>
                         <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="schoolmanagement_sales_info.html">查看</a>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
                         </td>
                       </tr>
                       <tr>
-                        <td>18000000000</td>
+                        <td>A000001</td>
                         <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="schoolmanagement_sales_info.html">查看</a>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
                         </td>
                       </tr>
                       <tr>
-                        <td>18000000000</td>
+                        <td>A000001</td>
                         <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
                         <td>
-                          <a class="btn btn-primary" href="schoolmanagement_sales_info.html">查看</a>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>A000001</td>
+                        <td>名字名字</td>
+                        <td class="xc-red">9999999</td>
+                        <td class="xc-red">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td class="base">9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
+                        <td>
+                          <a class="btn btn-primary" href="./schoolmanagement_sales_info.html">详细报表</button>
                         </td>
                       </tr>
                     </tbody>
                   </table>
                 </div>
-
                 <!-- build:pages -->
                 <!-- 分页 -->
                 <div class="row">
@@ -350,17 +548,8 @@
                       </li>
                     </ul>
                   </div>
-                </div>  
+                </div>
                 <!-- endbuild -->
-
-
-
-
-
-
-
-
-
               </div>
             </div>
           </div>
@@ -374,6 +563,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -402,6 +592,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
