--- a/src/html/synchronize.html
+++ b/src/html/synchronize.html
@@ -22,6 +22,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -53,9 +54,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -67,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -214,6 +214,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -914,6 +915,7 @@
 
 
 
+
   </div>
   <!-- 新增弹窗start -->
   <div id="jieduan" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade" style="display: none;">
@@ -1014,8 +1016,8 @@
   <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
-  <script src="../js/synchronize.js"></script>
   <!-- endbuild -->
+
 
 
 
