列表内容确实补全

--- a/src/html/datastatistics_all.html
+++ b/src/html/datastatistics_all.html
@@ -27,6 +27,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -69,6 +70,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -179,6 +181,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -212,11 +215,11 @@
                         <th>昵称</th>
                         <th>所属教师</th>
                         <th>所属班级</th>
-                        <th class="sorting">有效期</th>
-                        <th class="sorting">注册日期</th>
-                        <th class="sorting">到期日期</th>
-                        <th class="sorting">当前学币</th>
-                        <th class="sorting">年级</th>
+                        <th >有效期</th>
+                        <th >注册日期</th>
+                        <th >到期日期</th>
+                        <th >当前学币</th>
+                        <th >年级</th>
                       </tr>
                     </thead>
                     <tbody id="designerlist">
@@ -290,6 +293,7 @@
                 <!-- endbuild -->
 
 
+
               </div>
             </div>
           </div>
@@ -303,6 +307,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -330,6 +335,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
