--- a/src/html/salesdata.html
+++ b/src/html/salesdata.html
@@ -28,6 +28,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -70,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -186,6 +188,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -204,11 +207,21 @@
                       <tr>
                         <th>月份</th>
                         <th>月末余额</th>
-                        <th class="sorting">学校储值情况</th>
-                        <th class="sorting">本月续费人数</th>
-                        <th class="sorting">本月总充值（元）</th>
-                        <th class="sorting">本月30天续费（次）</th>
-                        <th class="sorting">本月60天续费</th>
+                        <th >学校储值情况</th>
+                        <th >本月续费人数</th>
+                        <th >本月总充值（元）</th>
+                        <th >本月30天续费（次）</th>
+                        <th >本月60天续费（次）</th>
+                        <th>本月90天续费（次）</th>
+                        <th>本月6个月续费（次）</th>
+                        <th>本月1年续费（次）</th>
+                        <th>本月2年续费（次）</th>
+                        <th>本月3年续费（次）</th>
+                        <th>月末付费学生总数</th>
+                        <th>过期人数</th>
+                        <th>流失学员</th>
+                        <th>转化人数</th>
+                        <th>转化率</th>
                         <th>操作</th>
                       </tr>
                     </thead>
@@ -221,6 +234,16 @@
                         <td>9999999</td>
                         <td>9999999</td>
                         <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
                         <td>
                           <a class="btn btn-primary" href="salesdata_info.html">余额明细</a>
                         </td>
@@ -233,6 +256,16 @@
                         <td>9999999</td>
                         <td>9999999</td>
                         <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
                         <td>
                           <a class="btn btn-primary" href="salesdata_info.html">余额明细</a>
                         </td>
@@ -245,6 +278,16 @@
                         <td>9999999</td>
                         <td>9999999</td>
                         <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>100%</td>
                         <td>
                           <a class="btn btn-primary" href="salesdata_info.html">余额明细</a>
                         </td>
@@ -292,6 +335,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -305,6 +349,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -335,6 +380,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
