--- a/src/html/datastatistics_renew.html
+++ b/src/html/datastatistics_renew.html
@@ -28,6 +28,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -70,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -182,6 +184,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -217,8 +220,8 @@
                         <th>昵称</th>
                         <th>所属教师</th>
                         <th>所属班级</th>
-                        <th class="sorting">有效期</th>
-                        <th class="sorting">到期日期</th>
+                        <th >有效期</th>
+                        <th >到期日期</th>
                         <th>当前学员组</th>
                         <th>操作</th>
                       </tr>
@@ -292,6 +295,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -305,6 +309,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -333,6 +338,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
