--- a/src/html/datastatistics_taste.html
+++ b/src/html/datastatistics_taste.html
@@ -28,6 +28,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -70,6 +71,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -182,6 +184,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -202,11 +205,11 @@
                         <th>昵称</th>
                         <th>所属教师</th>
                         <th>所属班级</th>
-                        <th class="sorting">有效期</th>
-                        <th class="sorting">注册日期</th>
-                        <th class="sorting">到期日期</th>
-                        <th class="sorting">当前学币</th>
-                        <th class="sorting">年级</th>
+                        <th >有效期</th>
+                        <th >注册日期</th>
+                        <th >到期日期</th>
+                        <th >当前学币</th>
+                        <th >年级</th>
                       </tr>
                     </thead>
                     <tbody id="designerlist">
@@ -281,6 +284,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -294,6 +298,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -322,6 +327,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
