--- a/src/html/studentmanagement_recharge.html
+++ b/src/html/studentmanagement_recharge.html
@@ -26,6 +26,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -68,6 +69,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -170,6 +172,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -212,8 +215,8 @@
                         <th>学生手机</th>
                         <th>姓名</th>
                         <th>昵称</th>
-                        <th class="sorting">有效期</th>
-                        <th class="sorting">到期日期</th>
+                        <th >有效期</th>
+                        <th >到期日期</th>
                         <th>所属教师</th>
                         <th>班级</th>
                         <th>当前学员组</th>
@@ -237,7 +240,7 @@
                         <td>2015-01-21</td>
                         <td>教师姓名</td>
                         <td>班级</td>
-                        <td>七年级</td>
+                        <td>小学</td>
                         <td>
                           <a class="btn btn-primary jq-record" href="javascript:;">充值记录</a>
                           <a class="btn btn-primary jq-recharge" href="javascript:;">充值</a>
@@ -259,7 +262,7 @@
                         <td>2015-01-21</td>
                         <td>教师姓名</td>
                         <td>班级</td>
-                        <td>七年级</td>
+                        <td>初中</td>
                         <td>
                           <a class="btn btn-primary jq-record" href="javascript:;">充值记录</a>
                           <a class="btn btn-primary jq-recharge" href="javascript:;">充值</a>
@@ -281,7 +284,7 @@
                         <td>2015-01-21</td>
                         <td>教师姓名</td>
                         <td>班级</td>
-                        <td>七年级</td>
+                        <td>高中</td>
                         <td>
                           <a class="btn btn-primary jq-record" href="javascript:;">充值记录</a>
                           <a class="btn btn-primary jq-recharge" href="javascript:;">充值</a>
@@ -323,6 +326,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -336,6 +340,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -359,6 +364,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 <script src="../js/studentmanagement.js"></script>
 
 
