--- a/src/html/teachermanagement_list.html
+++ b/src/html/teachermanagement_list.html
@@ -26,6 +26,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -68,6 +69,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -170,6 +172,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -206,10 +209,10 @@
                     <thead>
                       <tr>
                         <th>教师编号</th>
-                        <th class="sorting">创建时间</th>
+                        <th >创建时间</th>
                         <th>状态</th>
                         <th>最近登陆</th>
-                        <th class="sorting">近30天平均每日登陆(次)</th>
+                        <th >近30天平均每日登陆(次)</th>
                         <th>教师姓名</th>
                         <th>教师手机</th>
                         <th>学生总数</th>
@@ -319,6 +322,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -332,6 +336,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -355,6 +360,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/teachermanagement.js"></script>
 
