--- a/src/html/teachermanagement_sales.html
+++ b/src/html/teachermanagement_sales.html
@@ -26,6 +26,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -68,6 +69,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -170,6 +172,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -190,18 +193,21 @@
                         <th>教师姓名</th>
                         <th>历史总充值</th>
                         <th>当前余额</th>
-                        <th class="sorting">付费学生总数</th>
-                        <th class="sorting">历史付费学生数</th>
-                        <th class="sorting">总过期学员</th>
-                        <th class="sorting">本月续费人数</th>
-                        <th class="sorting">本月总充值（元）</th>
-                        <th class="sorting">本月30天续费（次）</th>
-                        <th class="sorting">本月60天续费（次）</th>
-                        <th class="sorting">本月90天续费（次）</th>
-                        <th class="sorting">本月6个月续费（次）</th>
-                        <th class="sorting">本月1年续费（次）</th>
-                        <th class="sorting">本月2年续费（次）</th>
-                        <th class="sorting">本月3年续费（次）</th>
+                        <th >付费学生总数</th>
+                        <th >历史付费学生数</th>
+                        <th >总过期学员</th>
+                        <th >本月续费人数</th>
+                        <th >本月总充值（元）</th>
+                        <th >本月30天续费（次）</th>
+                        <th >本月60天续费（次）</th>
+                        <th >本月90天续费（次）</th>
+                        <th >本月6个月续费（次）</th>
+                        <th >本月1年续费（次）</th>
+                        <th >本月2年续费（次）</th>
+                        <th >本月3年续费（次）</th>
+                        <th>本月流失学员</th>
+                        <th>历史转化人数</th>
+                        <th>总转化率</th>
                         <th>操作</th>
                       </tr>
                     </thead>
@@ -223,6 +229,9 @@
                         <td>9999999</td>
                         <td>+9999999</td>
                         <td>9999999</td>
+                        <td>99999</td>
+                        <td>99999</td>
+                        <td>100%</td>
                         <td>
                           <a class="btn btn-primary" href="./teachermanagement_sales_info.html">余额明细</a>
                         </td>
@@ -244,6 +253,9 @@
                         <td>9999999</td>
                         <td>+9999999</td>
                         <td>9999999</td>
+                        <td>99999</td>
+                        <td>99999</td>
+                        <td>100%</td>
                         <td>
                           <a class="btn btn-primary" href="./teachermanagement_sales_info.html">余额明细</a>
                         </td>
@@ -265,6 +277,9 @@
                         <td>9999999</td>
                         <td>+9999999</td>
                         <td>9999999</td>
+                        <td>99999</td>
+                        <td>99999</td>
+                        <td>100%</td>
                         <td>
                           <a class="btn btn-primary" href="./teachermanagement_sales_info.html">余额明细</a>
                         </td>
@@ -312,6 +327,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -325,6 +341,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -348,6 +365,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
