--- a/src/html/grammar_unit_fillblank.html
+++ b/src/html/grammar_unit_fillblank.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 
 
@@ -53,9 +54,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -67,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -214,6 +214,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -374,8 +375,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
               </div>
             </div>
           </div>
@@ -389,6 +391,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -447,6 +450,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/grammar.js"></script>
 
