--- a/src/html/intelligent_test_bas.html
+++ b/src/html/intelligent_test_bas.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>智能培优-真题冲刺</title>
+  <title>同步智测-基础知识</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -20,10 +20,10 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
-
-
-
   <link rel="stylesheet" href="../css/main_xc.css">
+
+
+
 </head>
 
 <body>
@@ -54,7 +54,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -66,7 +68,6 @@
       </nav>
     </header>
     <!-- endbuild -->
-
 
 
 
@@ -220,30 +221,83 @@
 
 
 
-
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          真题冲刺
+          基础知识
+          <ol class="breadcrumb">
+            <li>
+              <a href="./intelligent_test.html">同步智测</a>
+            </li>
+            <li>
+              <a href="./intelligent_test_unit.html">分卷</a>
+            </li>
+            <li>
+              <a href="./intelligent_test_unit_unit.html">卷内试题目录</a>
+            </li>
+            <li class="active">基础知识一</li>
+          </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="xc-text-group col-xs-6 center-block">
-              <div class="xc-text-item">
-                <a href="./intelligent_real_hearing.html">小升初
-                  <br>十套试卷
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./intelligent_real_hearing.html">中考冲刺
-                  <br>十套试卷
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./intelligent_real_hearing.html">高考冲刺
-                  <br>十套试卷
-                </a>
+            <div class="panel-default">
+              <div class="panel-heading">
+                <div class="xc-tab xc-mb10">
+                  <ul class="xc-tab-head xc-bas">
+                    <li class="active">
+                      <a href="#">Ⅰ</a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Ⅱ</a>
+                    </li>
+                    <li>
+                      <a href="#">Ⅲ</a>
+                    </li>
+                    <li>
+                      <a href="#">Ⅳ</a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Ⅴ</a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Ⅵ</a>
+                    </li>
+                  </ul>
+                </div>
+                <form class="form-horizontal">
+                  <div class="xc-mb10">
+                    <button class="btn btn-primary">保存</button>
+                    <button class="btn btn-default">清空代码</button>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="读单词，选出划线部分发音不同的单词，用A, B, C或D表示" class="form-control">
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>01</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>Option 1</option>
+                          <option>Option 2</option>
+                          <option>Option 3</option>
+                          <option>Option 4</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -257,7 +311,6 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
-
 
 
 
@@ -280,7 +333,6 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
 
 
 
