--- a/src/html/schoolmanagement_sales.html
+++ b/src/html/schoolmanagement_sales.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
-  <link rel="stylesheet" href="../css/main_xc.css">
   <!-- endbuild -->
+
 
 
 
@@ -57,9 +57,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -71,6 +69,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -225,6 +224,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -548,8 +548,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
               </div>
             </div>
           </div>
@@ -563,6 +564,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -592,6 +594,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
