--- a/src/html/intelligent_test_read_01.html
+++ b/src/html/intelligent_test_read_01.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步智测-卷内试题目录</title>
+  <title>同步智测-基础知识</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -225,7 +225,7 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          初中英语-牛津上海版-七年级第二册-Unit 1-同步智测（易）
+          阅读理解
           <ol class="breadcrumb">
             <li>
               <a href="./intelligent_test.html">同步智测</a>
@@ -233,24 +233,159 @@
             <li>
               <a href="./intelligent_test_unit.html">分卷</a>
             </li>
-            <li class="active">卷内试题目录</li>
+            <li>
+              <a href="./intelligent_test_unit_unit.html">卷内试题目录</a>
+            </li>
+            <li class="active">阅读理解A</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="xc-text-group col-xs-6 center-block">
-              <div class="xc-text-item">
-                <a href="./intelligent_test_bas_01.html">
-                  基础知识
-                  <br>(未录入)
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./intelligent_test_read_01.html">
-                  阅读理解
-                  <br>
-                  <span class="error">(未完成)</span>
-                </a>
+            <div class="panel-default">
+              <div class="panel-heading">
+                <div class="xc-tab xc-mb10">
+                  <ul class="xc-tab-head xc-bas">
+                    <li class="active">
+                      <a href="javascript:;">A</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_read_02.html">
+                        B</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_read_03.html">C</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_read_04.html">D</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_read_05.html">
+                        E</a>
+                    </li>
+                  </ul>
+                </div>
+                <form class="form-horizontal">
+                  <div class="xc-mb10">
+                    <button class="btn btn-primary">保存</button>
+                    <button class="btn btn-default">清空代码</button>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="选择方框内的句子完成对话，将编号填入相应的横线上" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">短文：</label>
+                    <div class="col-lg-11">
+                      <textarea class="form-control" placeholder="请输入短文" rows="5"></textarea>
+                      <p class="xc-error">注意：短文内的题目号应为 _____1_____ , _____2_____ , _____3_____ , _____4_____ , _____5_____</p>
+                    </div>
+                  </div>
+                  <h4>选项</h4>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">A：</label>
+                    <div class="col-lg-5">
+                      <input type="text" placeholder="请输入A选项" class="form-control">
+                    </div>
+                    <label class="col-lg-1 control-label">B：</label>
+                    <div class="col-lg-5">
+                      <input type="text" placeholder="请输入B选项" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">C：</label>
+                    <div class="col-lg-5">
+                      <input type="text" placeholder="请输入A选项" class="form-control">
+                    </div>
+                    <label class="col-lg-1 control-label">D：</label>
+                    <div class="col-lg-5">
+                      <input type="text" placeholder="请输入B选项" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">E：</label>
+                    <div class="col-lg-5">
+                      <input type="text" placeholder="请输入E选项" class="form-control">
+                    </div>
+                  </div>
+                  <h4>答案与解析</h4>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">1：</label>
+                    <div class="col-lg-2">
+                      <select name="account" class="form-control m-b">
+                        <option value="">请选择答案</option>
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                        <option>Option 4</option>
+                      </select>
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">2：</label>
+                    <div class="col-lg-2">
+                      <select name="account" class="form-control m-b">
+                        <option value="">请选择答案</option>
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                        <option>Option 4</option>
+                      </select>
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">3：</label>
+                    <div class="col-lg-2">
+                      <select name="account" class="form-control m-b">
+                        <option value="">请选择答案</option>
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                        <option>Option 4</option>
+                      </select>
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">4：</label>
+                    <div class="col-lg-2">
+                      <select name="account" class="form-control m-b">
+                        <option value="">请选择答案</option>
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                        <option>Option 4</option>
+                      </select>
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">5：</label>
+                    <div class="col-lg-2">
+                      <select name="account" class="form-control m-b">
+                        <option value="">请选择答案</option>
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                        <option>Option 4</option>
+                      </select>
+                    </div>
+                    <div class="col-lg-9">
+                      <input type="text" placeholder="请输入解析" class="form-control">
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
