--- a/src/html/intelligent_real_detail.html
+++ b/src/html/intelligent_real_detail.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步智测-卷内试题目录</title>
+  <title>智能培优-真题冲刺</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -20,10 +20,10 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
+
+
+
   <link rel="stylesheet" href="../css/main_xc.css">
-
-
-
 </head>
 
 <body>
@@ -68,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -221,38 +222,154 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          初中英语-牛津上海版-七年级第二册-Unit 1-同步智测（易）
+          小升初/中考/高考冲刺
           <ol class="breadcrumb">
             <li>
-              <a href="./intelligent_test.html">同步智测</a>
+              <a href="./intelligent_real.html">真题冲刺</a>
             </li>
-            <li>
-              <a href="./intelligent_test_unit.html">分卷</a>
-            </li>
-            <li class="active">卷内试题目录</li>
+            <li class="active">试题</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="xc-text-group col-xs-6 center-block">
-              <div class="xc-text-item">
-                <a href="./intelligent_test_bas_01.html">
-                  基础知识
-                  <br>(未录入)
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./intelligent_test_read_01.html">
-                  阅读理解
-                  <br>
-                  <span class="error">(未完成)</span>
-                </a>
-              </div>
-            </div>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#add">新增试卷</button>
+            <table class="table table-words">
+              <thead>
+                <tr>
+                  <th class="col-xs-1">当前序号</th>
+                  <th class="col-xs-2">试卷名称</th>
+                  <th class="col-xs-5">排序值（数字越大越靠后）</th>
+                  <th class="col-xs-1">是否显示</th>
+                  <th class="col-xs-3"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>高考真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>高考真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>高考真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>高考真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>高考真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>高考真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>高考真题模拟卷一</td>
+                  <td>
+                    <input type="text" value="1" class="form-control">
+                  </td>
+                  <td>
+                    <label class="switch switch-lg">
+                      <input type="checkbox">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sj">删除试卷</button>
+                    <a href="./intelligent_real_unit.html" class="btn btn-primary pull-right">修改试题</a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
@@ -270,8 +387,34 @@
 
 
 
-  </div>
 
+  </div>
+  <div id="add" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade" style="display: none;">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" data-dismiss="modal" aria-label="Close" class="close">
+            <span aria-hidden="true">×</span>
+          </button>
+          <h4 id="myModalLabel" class="modal-title">添加试卷</h4>
+        </div>
+        <div class="modal-body">
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label for="" class="col-lg-2">试卷标题：</label>
+              <div class="col-lg-10">
+                <input type="text" placeholder="
+                  请输入题干" class="form-control">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">添加</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -286,6 +429,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+  <script src="../js/intelligent.js"></script>
 
 
 
