--- a/src/html/intelligent_test_bas_04.html
+++ b/src/html/intelligent_test_bas_04.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步智测-卷内试题目录</title>
+  <title>同步智测-基础知识</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -225,7 +225,7 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          初中英语-牛津上海版-七年级第二册-Unit 1-同步智测（易）
+          基础知识
           <ol class="breadcrumb">
             <li>
               <a href="./intelligent_test.html">同步智测</a>
@@ -233,24 +233,134 @@
             <li>
               <a href="./intelligent_test_unit.html">分卷</a>
             </li>
-            <li class="active">卷内试题目录</li>
+            <li>
+              <a href="./intelligent_test_unit_unit.html">卷内试题目录</a>
+            </li>
+            <li class="active">基础知识四</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="xc-text-group col-xs-6 center-block">
-              <div class="xc-text-item">
-                <a href="./intelligent_test_bas_01.html">
-                  基础知识
-                  <br>(未录入)
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./intelligent_test_read_01.html">
-                  阅读理解
-                  <br>
-                  <span class="error">(未完成)</span>
-                </a>
+            <div class="panel-default">
+              <div class="panel-heading">
+                <div class="xc-tab xc-mb10">
+                  <ul class="xc-tab-head xc-bas">
+                    <li>
+                      <a href="./intelligent_test_bas_01.html">Ⅰ</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_bas_02.html">
+                        Ⅱ</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_bas_03.html">Ⅲ</a>
+                    </li>
+                    <li class="active">
+                      <a href="javascript:;">Ⅳ</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_bas_05.html">
+                        Ⅴ</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_bas_06.html">
+                        Ⅵ</a>
+                    </li>
+                  </ul>
+                </div>
+                <form class="form-horizontal">
+                  <div class="xc-mb10">
+                    <button class="btn btn-primary">保存</button>
+                    <button class="btn btn-default">清空代码</button>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">题目文本：</label>
+                    <div class="col-lg-11">
+                      <input type="text" placeholder="读单词，选出划线部分发音不同的单词，用A, B, C或D表示" class="form-control">
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>01</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>Option 1</option>
+                          <option>Option 2</option>
+                          <option>Option 3</option>
+                          <option>Option 4</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>02</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>Option 1</option>
+                          <option>Option 2</option>
+                          <option>Option 3</option>
+                          <option>Option 4</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>03</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                        <p class="xc-error">注意：设置填空的部分使用下方的文本格式</p>
+                        <p class="xc-error">sssss {$name} aaaaa</p>
+                        <p class="xc-error">例如：How are you，设置are为填空内容，则将正文写为：How sssss {$are} aaaaa you,并在下方的答案框内填写are</p>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>Option 1</option>
+                          <option>Option 2</option>
+                          <option>Option 3</option>
+                          <option>Option 4</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
