--- a/src/html/intelligent_test_read_03.html
+++ b/src/html/intelligent_test_read_03.html
@@ -225,7 +225,7 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          基础知识
+          阅读理解
           <ol class="breadcrumb">
             <li>
               <a href="./intelligent_test.html">同步智测</a>
@@ -236,7 +236,7 @@
             <li>
               <a href="./intelligent_test_unit_unit.html">卷内试题目录</a>
             </li>
-            <li class="active">基础知识一</li>
+            <li class="active">阅读理解C</li>
           </ol>
         </div>
         <div class="row">
@@ -245,26 +245,22 @@
               <div class="panel-heading">
                 <div class="xc-tab xc-mb10">
                   <ul class="xc-tab-head xc-bas">
+                    <li>
+                      <a href="./intelligent_test_read_01.html">A</a>
+                    </li>
+                    <li>
+                      <a href="./intelligent_test_read_02.html">
+                        B</a>
+                    </li>
                     <li class="active">
-                      <a href="#">Ⅰ</a>
+                      <a href="javascript:;">C</a>
                     </li>
                     <li>
-                      <a href="#">
-                        Ⅱ</a>
+                      <a href="./intelligent_test_read_04.html">D</a>
                     </li>
                     <li>
-                      <a href="#">Ⅲ</a>
-                    </li>
-                    <li>
-                      <a href="#">Ⅳ</a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        Ⅴ</a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        Ⅵ</a>
+                      <a href="./intelligent_test_read_05.html">
+                        E</a>
                     </li>
                   </ul>
                 </div>
@@ -276,20 +272,160 @@
                   <div class="form-group">
                     <label class="col-lg-1 control-label">题目文本：</label>
                     <div class="col-lg-11">
-                      <input type="text" placeholder="读单词，选出划线部分发音不同的单词，用A, B, C或D表示" class="form-control">
+                      <input type="text" placeholder="选择最恰当的答案，在前面的括号里用A, B或C表示" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">短文：</label>
+                    <div class="col-lg-11">
+                      <textarea class="form-control" placeholder="请输入短文" rows="5"></textarea>
                     </div>
                   </div>
                   <div class="xc-bas-item">
-                    <h4>01</h4>
+                    <h4>01.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">A：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入A选项" class="form-control">
+                      </div>
+                      <label class="col-lg-1 control-label">B：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入B选项" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">C：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入C选项" class="form-control">
+                      </div>
+                    </div>
                     <div class="form-group">
                       <label class="col-lg-1 control-label">答案&解析：</label>
                       <div class="col-lg-2">
                         <select name="account" class="form-control m-b">
                           <option value="">请选择答案</option>
-                          <option>Option 1</option>
-                          <option>Option 2</option>
-                          <option>Option 3</option>
-                          <option>Option 4</option>
+                          <option>1</option>
+                          <option>2</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>02.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">A：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入A选项" class="form-control">
+                      </div>
+                      <label class="col-lg-1 control-label">B：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入B选项" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">C：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入C选项" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>1</option>
+                          <option>2</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>03.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">A：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入A选项" class="form-control">
+                      </div>
+                      <label class="col-lg-1 control-label">B：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入B选项" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">C：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入C选项" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>1</option>
+                          <option>2</option>
+                        </select>
+                      </div>
+                      <div class="col-lg-9">
+                        <input type="text" placeholder="请输入解析" class="form-control">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xc-bas-item">
+                    <h4>04.</h4>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">题干：</label>
+                      <div class="col-lg-11">
+                        <input type="text" placeholder="请输入题干" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">A：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入A选项" class="form-control">
+                      </div>
+                      <label class="col-lg-1 control-label">B：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入B选项" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">C：</label>
+                      <div class="col-lg-5">
+                        <input type="text" placeholder="请输入C选项" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="col-lg-1 control-label">答案&解析：</label>
+                      <div class="col-lg-2">
+                        <select name="account" class="form-control m-b">
+                          <option value="">请选择答案</option>
+                          <option>1</option>
+                          <option>2</option>
                         </select>
                       </div>
                       <div class="col-lg-9">
